--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "formik": "^2.2.9",
     "lightbox.js-react": "^0.6.0",
     "node-sass": "^7.0.3",
+    "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-lightbox": "^5.1.4",
     "react-scripts": "5.0.1",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
