--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-lightbox": "^5.1.4",
     "react-scripts": "5.0.1",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
